# llamawatch

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup-sudoers.sh
llamawatch/: __init__.py  __main__.py  audit.py  auth.py  auto_detect.py  config.json  config.py  connections.py  layout.py  request_log.py  routes_framework.py  secrets_vault.py  security.py  server.py  sse.py  ws_hub.py
llamawatch/adapters/: __init__.py  base.py  llamacpp.py  ollama.py  openai_compat.py
llamawatch/collectors/: __init__.py  anomaly.py  claude_code.py  docker_collector.py  email_collector.py  fleet.py  gpu.py  inference_speed.py  model_status.py  (+14 more)
tests/: conftest.py  test_action_gating.py  test_actions_api.py  test_adapters.py  test_anomaly.py  test_audit.py  test_audit_extra.py  test_auth_hardening.py  test_auth_hashing.py  test_auth_sessions.py  test_auto_detect.py  test_boards_layout.py  test_collector_registry.py  test_collector_registry_v3.py  test_config.py  test_config_v3.py  test_connections.py  test_connections_api.py  test_connections_extra.py  test_docker_collector.py  test_docker_remote_action.py  test_docs_safe_resolve.py  test_email_collector.py  test_fleet.py  test_gpu_collector.py  test_inference_speed.py  test_inference_speed_tokens.py  test_init_cli.py  test_knowledge_endpoints.py  test_logs_collector.py  test_model_status_kv.py  test_model_status_swap.py  test_network_collector.py  test_power.py  test_press_room.py  test_press_room_search.py  test_registry_rebuild.py  test_request_history.py  test_request_log_extra.py  test_resource_hogs.py  (+13 more)
(+15 files in other folders)
